<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivPointube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_login" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/metUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/login_text_email"
        android:inputType="textEmailAddress"
        app:met_floatingLabel="highlight" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/metPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/login_text_password"
        android:inputType="textPassword"
        app:met_floatingLabel="highlight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text_remember_me" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_text_login"
        android:theme="@style/BaseButton.Teal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_new_user" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/login_text_sign_up"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/login_text_forget_password"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />
</LinearLayout>