...
          representative of class basis. Notwithstanding any other provision of these Terms of Service, to the extent
          that you have in any manner violated or threatened to violate Pointube\'s intellectual property rights,
          Pointube reserves the right to seek injunctive or other appropriate relief in any court in Thailand, and you
          consent to exclusive jurisdiction and venue in such courts.</string>

    <string name="terms_accept_term">Accept Terms &amp; Conditions</string>
    <string name="terms_btn_next">Next</string>

    <!-- Register Phone -->
    <string name="register_text_phone_info"> Pleases input your mobile phone number In field below
            Verification code will be sent  via SMS to your mobile phone.</string>

    <string name="register_phone_toast_save_success">Save phone number successfully</string>
...
    <string name="login_toast_login_success">Login success</string>
    <string name="login_toast_forgot_success">Reset password success</string>

    <string name="login_text_email">Email</string>
    <string name="login_text_password">Password</string>
    <string name="login_text_remember_me">Remember Me</string>
    <string name="login_text_sign_up">Sign Up</string>
    <string name="login_text_login">Log in</string>
    <string name="login_text_new_user">New User?</string>
    <string name="login_text_forget_password">Forget Password</string>

    <!-- Setting -->
    <string name="setting_text_dialog_progress_logging_out">Logging out…</string>
...
    <string name="brand_non_member_btn_select_all">Select all</string>
    <string name="brand_non_member_btn_un_select_all">Unselect all</string>

    <!-- Home -->
    <string name="home_toast_empty_program_list">Empty Programs</string>
    <string name="home_text_reward_program">Reward Programs</string>
    <string name="home_btn_login">Login</string>
    <string name="home_text_new_user">New User?</string>
    <string name="home_text_sign_up">Sign Up</string>
    <string name="home_text_title">Home</string>


    <!-- Promotion Detail -->
    <string name="promotion_detail_text_start">Start</string>
    <string name="promotion_detail_text_point">Point</string>
    <string name="promotion_detail_text_special_point">Special Point</string>
    <string name="promotion_detail_text_time">Time</string>
    <string name="promotion_detail_text_place">Place</string>
    <string name="promotion_detail_text_url">Url</string>
    <string name="promotion_detail_text_promotion_period">Promotion Period</string>
    <string name="promotion_detail_text_channel">Channels</string>
...
    <string name="validate_first_name">First name must not be empty</string>
    <string name="validate_last_name">Last name must not be empty</string>
    <string name="validate_validate_citizen_id">CitizenID must be 13 characters</string>
    <string name="validate_passport">Passport must be at least 10 characters</string>

    <!-- Dialog Default Value -->
    <string name="dialog_default_ok">OK</string>
    <string name="dialog_default_cancel">Cancel</string>
    <string name="dialog_default_progress_loading_title">Please wait</string>

    <!-- Promotion list view group -->
    <string name="viewgroup_promotion_list_points">Points</string>
    <string name="viewgroup_promotion_list_read_more">Read more…</string>
...
