<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_form_text_account" />

        <LinearLayout
            android:id="@+id/layoutAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/metEmail"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/register_form_text_email"
                android:inputType="textEmailAddress" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/metPassword"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/register_form_text_password"
                android:inputType="textPassword" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/metRepeatPassword"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/register_form_text_repeat_password"
                android:inputType="textPassword" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_form_text_your_profile" />

        <LinearLayout
            android:id="@+id/layoutProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/metFirstName"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/register_form_text_first_name_en"
                android:inputType="textPersonName" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/metLastName"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/register_form_text_last_name_en"
                android:inputType="textPersonName" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/metFirstNameTH"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/register_form_text_first_name_th"
                android:inputType="textPersonName" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/metLastNameTH"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/register_form_text_last_name_th"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/register_form_text_dob" />

            <TextView
                android:id="@+id/tvDob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:freezesText="true"
                android:hint="@string/register_form_text_hint_dob" />

            <LinearLayout
                android:id="@+id/layoutVerifyCitizen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <com.socket9.pointube.screens.register.ToggleViewGroup
                    android:id="@+id/toggleNationality"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:leftText="@string/register_form_text_thai"
                    app:rightText="@string/register_form_text_expat" />

                <LinearLayout
                    android:id="@+id/layoutCitizenID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/metCitizenID"
                        style="@style/BaseEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/register_form_text_citizen_id"
                        android:inputType="number"
                        android:maxLength="13"
                        app:met_iconLeft="@null"
                        app:met_maxCharacters="13" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/register_form_citizen_id_description" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutPassport"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/metPassport"
                        style="@style/BaseEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/register_form_text_passport"
                        android:inputType="text"
                        app:met_minCharacters="10" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/register_form_text_gender" />

            <com.socket9.pointube.screens.register.ToggleViewGroup
                android:id="@+id/toggleGender"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:leftText="@string/register_form_text_gender_male"
                app:rightText="@string/register_form_text_gender_female" />

        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:soundEffectsEnabled="true"
            android:text="@string/register_form_btn_register"
            android:theme="@style/BaseButton.Teal" />

    </LinearLayout>

</ScrollView>