...
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/home_btn_login"
            android:theme="@style/BaseButton.Teal" />

        <LinearLayout
            android:id="@+id/layoutNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_text_new_user" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/home_text_sign_up"
                android:textColor="@color/colorAccent" />

...
